# rss-notification-app

./: .gitignore  README.md
sam-app/: README.md  docker-compose.yaml  pyproject.toml  ssm-create.sh  template.yaml
sam-app/rss_notification/: app.py  requirements.txt
sam-app/rss_notification/rss/: fetcher.py  models.py
sam-app/rss_notification/slack/: models.py  notifier.py
sam-app/rss_notification/storage/: parameter_store.py  registry.py  spreadsheet.py  sqs.py
sam-app/rss_registration/: app.py
sam-app/volume/cache/: machine.json
terraform/: main.tf  variables.tf
